src/index.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');

html,
body,
#root,
.app{
    background-color: #2B2B2B;
    color: white;
    font-family: "Rubik", sans-serif;
    overflow: hidden;
    margin: 0;
    font-size: 14px;
}
@media (max-width: 768px){
    html,
    body,
    #root,
    .app{
        font-family: "Rubik", sans-serif;
        font-size: 10px;
        overscroll-behavior-y: contain !important;
    }
}


.appeared {
    animation-name: appearance;
    animation-duration: 0.2s;
    animation-timing-function: ease-in;
}

@keyframes appearance {
    0% {
        opacity: 0.06;
    }
    100% {
        opacity: 1;
    }
}

.merged {
    animation-name: merge;
    animation-duration: 0.2s;
    animation-timing-function: linear;
}

@keyframes merge {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.1);
    }
    100% {
        transform: scale(1);
    }
}

